BUG: Increased size of collection boxes to fix wrapping issues due to the larger font. Added CSS to revert this change in the legacy_styling plugin.
git-svn-id: http://svn.montala.net/svn/resourcespace@5080 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -107,7 +107,8 @@ input.defaultbutton {position: absolute; left: -100%; width: 0; height: 0;}
 #CentralSpace .SearchWidth {width: 550px;font: 10px Ubuntu, Tahoma, Arial, Helvetica, sans-serif;margin: 0px 0px;padding: 0px;}
 #CentraSpace .SearchWidthExp {width:200px;font: 10px Ubuntu, Tahoma, Arial, Helvetica, sans-serif;margin: 0px 0px;padding: 0px;}
 
-.CollectionPanelShell{padding:0;float: left;margin: 0px 15px 5px 0px;width: 77px;height: 110px;}
+
+.CollectionPanelShell {padding:0;float: left;margin: 0px 15px 5px 0px;width: 97px;height: 120px;}
 .CollectionPanelInfo{}
 .CollectionResourceAlign {width:77px;height:85px;text-align: center;vertical-align: middle;}
 
