--- a/plugins/legacy_styling/css/style.css
+++ b/plugins/legacy_styling/css/style.css
@@ -60,4 +60,6 @@ h1, h2, .RecordPanel .Title {font: normal 1.5em Arial, Helvetica, sans-serif;}
 
 #CollectionMenu{width: 166px;}
 .CollectionSpace{left: 199px;}
+.CollectionPanelShell {width: 77px;height: 110px;}
+
 
